# scribe-engine

./: .env.example  .gitignore  Cargo.toml  README.md  README.zh-CN.md
config/: README.md  mcp_servers.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  styles.css
posts/: scribe-engine-smoke.md
src/: README.md  agents.rs  ask.rs  cli.rs  compact.rs  config.rs  lib.rs  main.rs  runtime.rs  web.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/llm/: README.md  cache.rs  mod.rs  openai.rs  session.rs  usage.rs
src/tools/: README.md  github_pages.rs  github_wiki.rs  glob_search.rs  grep_search.rs  mcp.rs  mod.rs  read_file.rs  task.rs  task_registry.rs  team.rs  todo_write.rs  web_fetch.rs  write_file.rs
static/: app.js  index.html  styles.css
