[package]
name = "scribe_engine_desktop"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
my_claw = { path = ".." }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt-multi-thread"] }
